--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-spreadsheet": "^3.3.0",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
